# docbuf

./: .gitignore  Cargo.toml  LICENSE  README.md
.zed/: settings.json
benchmarks/: Cargo.toml
benchmarks/benches/: main.rs
benchmarks/src/: benches.rs  lib.rs  main.rs
benchmarks/src/benches/: deserialization.rs  roundtrip.rs  serialization.rs  vtable.rs
cli/: Cargo.toml
core/: Cargo.toml
core/src/: error.rs  idl.rs  lexer.rs  lib.rs  macros.rs  parser.rs  serde.rs  traits.rs  vtable.rs
core/src/idl/: compiler.rs  error.rs  lexer.rs  parser.rs
core/src/macros/: derive.rs
core/src/serde/: de.rs  ser.rs
core/src/vtable/: bufmap.rs  field.rs  fields.rs  item.rs  structs.rs  table.rs
core/src/vtable/field/: decode.rs  encode.rs  numeric.rs  offset.rs  rules.rs  validate.rs
core/src/vtable/item/: structs.rs
database/: Cargo.toml
database/src/: config.rs  lib.rs  lock.rs  manager.rs  page.rs  partition.rs  partition_key.rs  predicate.rs  service.rs  traits.rs
database/src/partition/: partition_id.rs  partition_key.rs
derive/: Cargo.toml
derive/src/: derive.rs  lib.rs  rpc.rs
guide/: book.toml
guide/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json
guide/src/: overview.md
idl/: Cargo.toml
idl/examples/: another.docbuf  example.docbuf
idl/src/: document.rs  lexer.rs  parser.rs
macros/: Cargo.toml
macros/src/: derive.rs  lib.rs
macros/tests/: test.rs
rpc/: Cargo.toml
rpc/src/: auth.rs  client.rs  connections.rs  error.rs  header.rs  http3.rs  lib.rs  quic.rs  request.rs  response.rs  server.rs  service.rs  status.rs  traits.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
serde/: Cargo.toml
serde/src/: error.rs  lib.rs  ser.rs
syntax/: Cargo.toml  syntax.tmLanguage.yml  syntax.yaml
syntax/src/: lib.rs
tests/: Cargo.toml
tests/src/: complex.rs  database.rs  lib.rs  rpc.rs  strings.rs  unsigned_integers.rs  vtable.rs
tests/src/macros/: mod.rs
