[package]
name = "docbuf"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://docbuf.com"
description = "DocBuf Command Line Interface (CLI) Tool"
readme = "../README.md"
repository = "https://github.com/docbuf/docbuf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docbuf-core = { version = "0.1.0", path = "../core" }
