[package]
name = "docbuf-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://docbuf.com"
description = "DocBuf core utilities"
readme = "../README.md"
repository = "https://github.com/docbuf/docbuf"

[features]
full = ["crypto"]
crypto = ["digest", "ed25519", "sha2"]

[dependencies]
digest = { version = "0.10.7", optional = true }
ed25519 = { version = "2.2.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
logos = { version = "0.14.0", features = [] }
nom = { version = "7.1.3", features = ["alloc"] }
proc-macro2 = "1.0.78"
regex = "1.10.3"
serde = "1.0.196"
thiserror = "1.0.56"
