[package]
name = "docbuf-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://docbuf.com"
description = "DocBuf core utilities"
readme = "../README.md"
repository = "https://github.com/docbuf/docbuf"

[features]
default = ["full"]
full = ["crypto", "macros", "validate"]
crypto = ["digest", "ed25519", "sha2"]
macros = ["proc-macro2", "quote", "syn"]
validate = ["regex"]
regex = ["dep:regex"]

[dependencies]
digest = { version = "0.10.7", optional = true }
ed25519 = { version = "2.2.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
logos = { version = "0.14.0", features = [] }
nom = { version = "7.1.3", features = ["alloc"] }
proc-macro2 = { version = "1.0.78", optional = true }
quote = { version = "1.0.35", optional = true }
syn = { version = "2.0.48", optional = true, features = ["full"] }
regex = { version = "1.10.3", optional = true }
serde = "1.0.196"
thiserror = "1.0.56"
