[package]
name = "docbuf-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://docbuf.com"
description = "DocBuf core utilities"
readme = "../README.md"
repository = "https://github.com/docbuf/docbuf"

[features]
default = ["std", "full"]
std = []
full = ["crypto", "macros", "validate", "db"]
db = []
crypto = ["digest", "ed25519", "sha2"]
macros = ["proc-macro2", "quote", "syn"]
validate = ["regex"]
regex = ["dep:regex"]

[dependencies]
digest = { version = "0.10.7", optional = true }
ed25519 = { version = "2.2.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
proc-macro2 = { version = "1.0.78", optional = true }
quote = { version = "1.0.35", optional = true }
syn = { version = "2.0.48", optional = true, features = ["full"] }
regex = { version = "1.10.3", optional = true }
serde = "1.0.196"
serde_derive = "1.0.197"
thiserror = "1.0.57"
tracing = "0.1.40"
hex = "0.4.3"
