[package]
name = "docbuf-derive"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["db", "regex"]
db = []
regex = ["docbuf-core/regex"]

[dependencies]
docbuf-core = { path = "../core", features = ["full"] }
proc-macro-error = "1.0.4"
proc-macro2 = { version = "1.0.78" }
quote = { version = "1.0.35" }
syn = { version = "2.0.48", features = ["full"] }
thiserror = "1.0.57"
