[package]
name = "docbuf-idl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = { version = "0.14.0", features = [] }
nom = { version = "7.1.3", features = ["alloc"] }
regex = { version = "1.10.3" }
thiserror = "1.0.56"
