[package]
name = "docbuf-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# Tests
[[bin]]
name = "test"
path = "tests/test.rs"

[features]
default = ["docbuf-core/crypto"]

[dependencies]
docbuf-core = { path = "../core", features = ["full"] }
# digest = { version = "0.10.7", optional = true }
# ed25519 = { version = "2.2.3", optional = true }
proc-macro2 = "1.0.78"
quote = "1.0.35"
serde = { version = "1.0.196", features = ["derive"] }
# sha2 = { version = "0.10.8", optional = true }
syn = { version = "2.0.48", features = ["full"] }
