[package]
name = "docbuf-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# Tests
[[bin]]
name = "test"
path = "tests/test.rs"

[features]
default = ["docbuf-core/crypto"]

[dependencies]
bincode = "1.3.3"
docbuf-core = { path = "../core", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
# proc-macro2 = "1.0.78"
# quote = "1.0.35"
# syn = { version = "2.0.48", features = ["full"] }
# digest = { version = "0.10.7", optional = true }
# ed25519 = { version = "2.2.3", optional = true }
# sha2 = { version = "0.10.8", optional = true }
