[package]
name = "docbuf-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = []

[dependencies]
docbuf-derive = { path = "../derive" }
proc-macro-error = "1.0.4"
# bincode = "1.3.3"
# serde = { version = "1.0.196", features = ["derive"] }
# serde_json = "1.0.113"
