[package]
name = "docbuf-tests"
version = "0.1.0"
edition = "2021"

[features]
default = ["db"]
db = ["docbuf-core/db", "docbuf-db"]

[dependencies]
docbuf-core = { path = "../core", features = ["full"] }
docbuf-macros = { version = "0.1.0", path = "../macros" }
docbuf-db = { path = "../database", optional = true }
bincode = "1.3.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
test-log = "0.2.15"
serde_bytes = "0.11.14"
