[package]
name = "docbuf-tests"
version = "0.1.0"
edition = "2021"

[features]
default = ["db", "rpc"]
db = ["docbuf-core/db", "docbuf-db"]
rpc = ["docbuf-rpc"]

[dependencies]
docbuf-core = { path = "../core", features = ["full"] }
docbuf-macros = { version = "0.1.0", path = "../macros" }
docbuf-db = { path = "../database", optional = true }
docbuf-rpc = { path = "../rpc", optional = true }
bincode = "1.3.3"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_bytes = "0.11.14"
test-log = "0.2.15"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
